--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
     "phpstan/phpstan": "0.*",
     "jeyroik/extas-snuffbox": "0.*",
     "jeyroik/extas-snuffbox-repositories": "0.*"
+    "jeyroik/extas-snuffbox-loggers": "0.*"
   },
   "autoload": {
     "psr-4": {
