--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     "jeyroik/deflou-self": "0.*",
     "jeyroik/extas-snuffbox": "0.*",
     "jeyroik/extas-snuffbox-repositories": "0.*",
-    "jeyroik/extas-snuffbox-loggers": "0.*"
+    "jeyroik/extas-snuffbox-loggers": "0.*",
+    "jeyroik/extas-snuffbox-conditions": "0.*"
   },
   "autoload": {
     "psr-4": {
